--- a/style/donate.css
+++ b/style/donate.css
@@ -11,10 +11,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative; background-blend-mode: darken;
+    position: relative;
+    background-blend-mode: darken;
 }
-
-
 
 .div-title {
     text-align: center;
@@ -23,30 +22,130 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: absolute; bottom: 60%;
+    position: absolute;
+    bottom: 60%;
     color: #ffffff;
 }
 
-.nav-title{ font-size: 35px;margin-bottom: 20px;font-feature-settings: 'clig' off, 'ligan' off;
+.nav-title {
+    font-size: 35px;
+    margin-bottom: 20px;
+    font-feature-settings: "clig" off, "ligan" off;
 }
 
-.nav-decoration{ font-size: 14px;color: rgb(249, 220, 182);}
+.nav-description {
+    font-size: 14px;
+    color: rgb(249, 220, 182);
+}
 
+.btn-primary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    padding: 18px 35px;
+    margin-top: 30px;
+    margin-left: 300px;
+    border-radius: 5px;
+    height: 64px;
+    border: 0;
+    color: #fff;
+    background: #c04444;
+    text-decoration: none;
+}
 
-.btn-primary{display: flex;
+/* Donate Today */
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.donate today {
+    margin-top: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    padding: 130px 150px;
+    text-align: center;
+}
+
+.donate-title {
+    margin-top: 130px;
+    display: flex;
+    margin-bottom: 30px;
+    align-items: center;
+    margin-left: 400px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.donate-description {
+    font-size: 18px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    margin: 0 300px;
+    text-decoration:none ;
+    margin-bottom: 40px;
+
+}
+
+ .donate-info-container{ display: flex; justify-content: space-around;}
+
+ 
+
+ .info-title{display: flex; 
 justify-content: center;
 align-items: center;
 font-weight: 700;
-padding: 18px 35px;
-margin-top: 30px;
-margin-left: 300px;
-border-radius: 5px;
-height: 64px;
+padding: 35px 35px; 
+border-radius: 50px;
 border: 0;
-color: #fff;
-background: #c04444;
+margin: 20px 0;color: #707070;font-size:35px ;
+margin-top: 30px;
+margin-bottom: 300px;
+background: #fafafa;
 text-decoration: none;
+
 }
 
+.info-title-1{display: flex; 
+    justify-content: space-around;
+    align-items: center;
+    font-weight: 700;
+    padding: 35px 35px; 
+    border-radius: 50px;
+    border: 0;
+    margin: 20px 0;
+    font-size:35px ;
+    margin-top: 30px;
+    margin-bottom: 300px;
+    background:#fee2e2;
+    color: #FF5959;
+    border: 2px solid #FF5959;
+    text-decoration: none;
+    }
 
-       
+    .Other{text-align: center;
+        margin-bottom: 10px;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 15px;
+        mix-blend-mode:overlay;
+}
+
+.btn-button{display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    padding: 18px 35px;
+    margin-top: 30px;
+    margin-left: 450px;
+    border-radius: 5px;
+    height: 64px;
+    border: 0;
+    color: #fff;
+    background: #FF5959;;
+    text-decoration: none; }
