--- a/style/donate.css
+++ b/style/donate.css
@@ -19,23 +19,24 @@
     text-align: center;
     position: absolute;
     font-weight: 700;
-    top: 40%;
+    font-size: 50px;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
     bottom: 60%;
-    color: #ffffff;
+    color: #db1f1f;
 }
 
 .nav-title {
     font-size: 35px;
     margin-bottom: 20px;
-    font-feature-settings: "clig" off, "ligan" off;
+    font-size: 24px;
 }
 
 .nav-description {
     font-size: 14px;
-    color: rgb(249, 220, 182);
+    color: rgb(120, 201, 226);text-align: center;
 }
 
 .btn-primary {
@@ -51,7 +52,7 @@
     height: 64px;
     border: 0;
     color: #fff;
-    background: #c04444;
+    background: #9f0f0f;
     text-decoration: none;
 }
 
@@ -104,7 +105,7 @@ border-radius: 50px;
 border: 0;
 margin: 20px 0;color: #707070;font-size:35px ;
 margin-top: 30px;
-margin-bottom: 300px;
+margin-bottom: 100px;
 background: #fafafa;
 text-decoration: none;
 
@@ -149,3 +150,47 @@ text-decoration: none;
     color: #fff;
     background: #FF5959;;
     text-decoration: none; }
+
+
+    /* Our Donate Plan */
+
+
+    .our donate plan{margin-top: 130px; }
+
+    .section-title{ 
+     text-align: center;
+    font-size: 30px;margin-top: 100px;
+}
+     .section-description{ font-size: 22px; margin-top: 40px; text-align: center; margin-bottom: 30px;}
+
+
+    .donate-container{ display: flex;gap: 35px;}
+
+
+    .donate-title-2{ font-size: 24px;
+    font-weight: 700; margin-top: 40px;
+    margin-bottom: 20px;
+    }
+
+    .donate-description-2{ color:#757575 ; text-align: center;}
+
+
+.donate-1{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+    border-radius: 5px;
+    padding: 30px;
+background:  rgba(42, 122, 132, 0.1);
+}
+
+
+.donate-2{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+    border-radius: 5px;
+    padding: 30px; 
+background: rgb(231, 226, 213);
+}
+
+
+.donate-3{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+    border-radius: 5px;
+    padding: 30px; 
+background: rgba(201, 57, 57, 0.1);
+}
