--- a/style/donate.css
+++ b/style/donate.css
@@ -19,7 +19,7 @@
     text-align: center;
     position: absolute;
     font-weight: 700;
-    font-size:35px;
+    font-size: 35px;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,7 +36,8 @@
 
 .nav-description {
     font-size: 18px;
-    color: rgb(58, 98, 220);text-align: center;
+    color: rgb(58, 98, 220);
+    text-align: center;
 }
 
 .btn-primary {
@@ -86,56 +87,64 @@ main {
     display: flex;
     align-items: center;
     margin: 0 300px;
-    text-decoration:none ;
+    text-decoration: none;
     margin-bottom: 40px;
 
 }
 
- .donate-info-container{ display: flex; justify-content: space-around;}
-
- 
-
- .info-title{display: flex; 
-justify-content: center;
-align-items: center;
-font-weight: 700;
-padding: 35px 35px; 
-border-radius: 50px;
-border: 0;
-margin: 20px 0;color: #707070;font-size:35px ;
-margin-top: 30px;
-margin-bottom: 100px;
-background: #fafafa;
-text-decoration: none;
-
+.donate-info-container {
+    display: flex;
+    justify-content: space-around;
 }
 
-.info-title-1{display: flex; 
-    justify-content: space-around;
+
+
+.info-title {
+    display: flex;
+    justify-content: center;
     align-items: center;
     font-weight: 700;
-    padding: 35px 35px; 
+    padding: 35px 35px;
     border-radius: 50px;
     border: 0;
     margin: 20px 0;
-    font-size:35px ;
+    color: #707070;
+    font-size: 35px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    background: #fafafa;
+    text-decoration: none;
+
+}
+
+.info-title-1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-weight: 700;
+    padding: 35px 35px;
+    border-radius: 50px;
+    border: 0;
+    margin: 20px 0;
+    font-size: 35px;
     margin-top: 30px;
     margin-bottom: 300px;
-    background:#fee2e2;
+    background: #fee2e2;
     color: #FF5959;
     border: 2px solid #FF5959;
     text-decoration: none;
-    }
-
-    .Other{text-align: center;
-        margin-bottom: 10px;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 15px;
-        mix-blend-mode:overlay;
 }
 
-.btn-button{
+.Other {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 15px;
+    mix-blend-mode: overlay;
+}
+
+.btn-button {
     justify-content: center;
     align-items: center;
     font-weight: 700;
@@ -147,96 +156,195 @@ text-decoration: none;
     height: 64px;
     border: 0;
     color: #fff;
-    background: #FF5959;;
-    text-decoration: none; }
-
-
-    /* Our Donate Plan */
-
-
-    .our donate plan{margin-top: 130px; }
-
-    .section-title{ 
-     text-align: center;
-    font-size: 30px;margin-top: 100px;
+    background: #FF5959;
+    ;
+    text-decoration: none;
 }
-     .section-description{ font-size: 22px; margin-top: 40px; text-align: center; margin-bottom: 30px;}
 
 
-    .donate-container{ display: flex;gap: 35px;}
+/* Our Donate Plan */
 
 
-    .donate-title-2{ font-size: 24px;
-    font-weight: 700; margin-top: 40px;
+.our donate plan {
+    margin-top: 130px;
+}
+
+.section-title {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 100px;
+}
+
+.section-description {
+    font-size: 22px;
+    margin-top: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+
+.donate-container {
+    display: flex;
+    gap: 35px;
+}
+
+
+.donate-title-2 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 40px;
     margin-bottom: 20px;
-    }
+}
 
-    .donate-description-2{ color:#757575 ; text-align: center;}
+.donate-description-2 {
+    color: #757575;
+    text-align: center;
+}
 
 
-.donate-1{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+.donate-1 {
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
     padding: 30px;
-background:  rgba(42, 122, 132, 0.1);
+    background: rgba(42, 122, 132, 0.1);
 }
 
 
-.donate-2{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+.donate-2 {
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
-    padding: 30px; 
-background: rgb(231, 226, 213);
+    padding: 30px;
+    background: rgb(231, 226, 213);
 }
 
 
-.donate-3{box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+.donate-3 {
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
-    padding: 30px; 
-background: rgba(201, 57, 57, 0.1);
+    padding: 30px;
+    background: rgba(201, 57, 57, 0.1);
 }
 
 
 /* Their lives depend on your donation */
-    
 
 
-.depend-pic{display:flex ; margin-top: 20px; gap: 40px;margin-bottom: 20px;}
 
- .pic{box-shadow:0px 1px 1px 1px; 
+.depend-pic {
+    display: flex;
+    margin-top: 20px;
+    gap: 40px;
+    margin-bottom: 20px;
+}
+
+.pic {
+    box-shadow: 0px 1px 1px 1px;
     border-radius: 10px;
-    padding: 2px rgb(231, 226, 213);} 
+    padding: 2px rgb(231, 226, 213);
+}
 
-.depend-title{ margin-top: 80px;
+.depend-title {
+    margin-top: 80px;
     margin-bottom: 20px;
     align-items: center;
     margin-left: 50px;
     font-weight: 700;
-    font-size: 40px;}
+    font-size: 40px;
+}
 
-    .depend-item { font-size: 24px;
-        margin-bottom: 0px;
-        align-items: center;
-        text-decoration:none ;
-        margin-bottom: 20px;} 
+.depend-item {
+    font-size: 24px;
+    margin-bottom: 0px;
+    align-items: center;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
 
-        .btn-button-1{justify-content: center;
-            align-items: center;
-            font-weight: 700;
-            font-size: 22px;
-            padding: 14px 30px;
-            margin-top: 10px;
-            margin-left: 10px;
-            margin-bottom: 50px;
-            border-radius: 5px;
-            height: 64px;
-            border: 0;
-            color: #fff;
-            background: #FF5959;;
-            text-decoration: none; }
+.btn-button-1 {
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    padding: 14px 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 50px;
+    border-radius: 5px;
+    height: 64px;
+    border: 0;
+    color: #fff;
+    background: #FF5959;
+    ;
+    text-decoration: none;
+}
 
 
 
-            .update{ text-align: center; margin-top: 100px; margin-bottom: 40px;}
+.update {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 40px;
+}
 
-            .update-this{ font-size: 30px;margin-bottom: 0px;}
+.update-this {
+    font-size: 30px;
+    margin-bottom: 0px;
+}
 
-            .update-description{ font-size:24px ; padding: 80px;}
+.update-description {
+    font-size: 24px;
+    padding: 80px;
+}
+
+
+/* finish section */
+
+
+/* .input-1{text-align: center; box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06); 
+                border-radius: 5px;
+                padding: 20px;
+            background:  rgba(42, 122, 132, 0.1); */
+
+.input-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background-color: rgb(250, 223, 156);
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-bottom: 200px;
+    font-size: 30px;
+}
+
+.email {
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    color: #FF5959;
+    background: #fff;
+}
+
+.submit {
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    color: #fff;
+    background: #FF5959;
+}
+
+
+.input-2 {justify-content: center;
+    background: Black;
+    text-align: center;
+    font-size: 14px;
+    height: 100px;
+    margin-top: 60px;
+    border-radius: 20px;
+    color:#FF5959}
+
+    .input-3{ padding-top: 15px; padding-bottom: 10px;}
+
+    .input-4{ color: #fff;}
